--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@tsconfig/svelte": "^5.0.5",
+    "@types/node": "^24.10.0",
     "svelte": "^5.0.0",
+    "svelte-check": "^4.3.3",
+    "typescript": "^5.9.3",
     "vite": "^5.4.0"
   },
   "dependencies": {
